--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/">Ur mother's house</a></li>
+	        	<li><a href="/about">People who give a fuck</a></li>
+        		<li><a href="https://en.wikipedia.org/wiki/Bible">meckanators</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>The Boy's Common Room Weekly Superlatives</h1>
+				<p>Vote for who you think is what. Don't vote twice. If who you want isn't on the poll add them in other, first names only and add a reason</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
-		<script>(function(i,s,o,g,r,a,m){i['QP']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//scripts.poll-maker.com/3012/pollembed.js','qp');</script><a href='https://www.quiz-maker.com' data-poll='4193471xEaB54E35-132' style='width:100%; display:block; text-align:right;'>Quizmaker</a>
+		<!--https://www.poll-maker.com/-->
+		
+		<script>(function(i,s,o,g,r,a,m){i['QP']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//scripts.poll-maker.com/3012/pollembed.js','qp');</script><a href='https://www.quiz-maker.com' data-poll='4193491x5D1d46aE-132' style='width:100%; display:block; text-align:right;'>QuizMaker</a>
+		
+		<script>(function(i,s,o,g,r,a,m){i['QP']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//scripts.poll-maker.com/3012/pollembed.js','qp');</script><a href='https://www.quiz-maker.com' data-poll='4193492x9b45D056-132' style='width:100%; display:block; text-align:right;'>QuizMaker</a>
 		
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li>don't be a dog</li>
 			</ul>
 		</footer>
 	</body>
