--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Ur mother's house</a></li>
-	        	<li><a href="/about">People who give a fuck</a></li>
+        		<li><a href="https://www.indiatoday.in/lifestyle/buzz-top/story/world-biggest-toilet-pot-unveiled-haryana-trump-village-lifest-1090139-2017-11-20">Ur mother's house</a></li>
+	        	<li><a href="https://en.wikipedia.org/wiki/Nobody_(2021_film)t">People who give a fuck what you think about this</a></li>
         		<li><a href="https://en.wikipedia.org/wiki/Bible">meckanators</a></li>
     		</ul>
 		</nav>
