--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>The Boy's Common Room Weekly Superlatives</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/main.css">
+		<link rel="icon" href="/cow.ico">
 	</head>
 	<body>
 		<nav>
