--- a/winners.html
+++ b/winners.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>The Boy's Common Room Weekly Superlatives</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/main.css">
+		<link rel="icon" href="/cow.ico">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="https://www.indiatoday.in/lifestyle/buzz-top/story/world-biggest-toilet-pot-unveiled-haryana-trump-village-lifest-1090139-2017-11-20">Ur mother's house</a></li>
+	        	<li><a href="https://en.wikipedia.org/wiki/Nobody_(2021_film)">People who give a fuck what you think about this</a></li>
+        		<li><a href="/">home</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>The Boy's Common Room Weekly Superlative's Past Winners</h1>
+          
+          <h2>Week 1 Winners</h2>
+          <ul>
+        		<li>Biggest L - </li>
+            <li>Biggest roughie - </li>
+            <li>Biggest simp - </li>
+            <li>Biggest meckanator - </li>
+			    </ul>
+				
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		
+		
+		<footer>
+    		<ul>
+        		<li>don't be a dog</li>
+			</ul>
+		</footer>
+	</body>
+</html>
