--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     		<ul>
         		<li><a href="https://www.indiatoday.in/lifestyle/buzz-top/story/world-biggest-toilet-pot-unveiled-haryana-trump-village-lifest-1090139-2017-11-20">Ur mother's house</a></li>
 	        	<li><a href="https://en.wikipedia.org/wiki/Nobody_(2021_film)">People who give a fuck what you think about this</a></li>
-        		<li><a href="/winners">meckanators</a></li>
+        		<li><a href="/theboyscommonroom.github.io/winners">meckanators</a></li>
     		</ul>
 		</nav>
 		<div class="container">
