--- a/winners.html
+++ b/winners.html
@@ -21,9 +21,9 @@
           <h2>Week 1 Winners</h2>
           <ul>
         		<li>Biggest L - </li>
-            <li>Biggest roughie - </li>
-            <li>Biggest simp - </li>
-            <li>Biggest meckanator - </li>
+		  <li><p>Biggest roughie - </p></li>
+		  <li><p>Biggest simp - </p></li>
+		  <li><p>Biggest meckanator - </p></li>
 			    </ul>
 				
     		</div><!-- /.blurb -->
