--- a/winners.html
+++ b/winners.html
@@ -20,7 +20,7 @@
           
           <h2>Week 1 Winners</h2>
           <ul>
-        		<li>Biggest L - </li>
+		  <li><p>Biggest L - </p></li>
 		  <li><p>Biggest roughie - </p></li>
 		  <li><p>Biggest simp - </p></li>
 		  <li><p>Biggest meckanator - </p></li>
