--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The Boy's Common Room Weekly Superlatives</title>
+		<title>I WANT TO DIE</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/main.css">
 		<link rel="icon" href="/cow.ico">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="https://www.indiatoday.in/lifestyle/buzz-top/story/world-biggest-toilet-pot-unveiled-haryana-trump-village-lifest-1090139-2017-11-20">Ur mother's house</a></li>
-	        	<li><a href="https://en.wikipedia.org/wiki/Nobody_(2021_film)">People who give a fuck what you think about this</a></li>
-        		<li><a href="https://theboyscommonroom.github.io/winners">past greatest meckanators</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>The Boy's Common Room Weekly Superlatives</h1>
-				<p>Vote for who you think is what. Don't vote twice. If who you want isn't on the poll add them in other, first names only and add a reason</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		
-		<!--https://www.poll-maker.com/-->
-		
-		<script>(function(i,s,o,g,r,a,m){i['QP']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//scripts.poll-maker.com/3012/pollembed.js','qp');</script><a href='https://www.quiz-maker.com' data-poll='4193491x5D1d46aE-132' style='width:100%; display:block; text-align:right;'>QuizMaker</a>
-		
-		<script>(function(i,s,o,g,r,a,m){i['QP']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//scripts.poll-maker.com/3012/pollembed.js','qp');</script><a href='https://www.quiz-maker.com' data-poll='4193492x9b45D056-132' style='width:100%; display:block; text-align:right;'>QuizMaker</a>
-		
-		<footer>
-    		<ul>
-        		<li>don't be a dog</li>
-			</ul>
-		</footer>
+		<h1>KILL ME NOW</h1>
 	</body>
 </html>
