--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		<link rel="icon" href="/cow.ico">
 	</head>
 	<body>
-		<h1 class="centred">KILL ME NOW</h1>
+		<h1 class="centered">KILL ME NOW</h1>
 	</body>
 </html>
