--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/main.css">
 		<link rel="icon" href="/cow.ico">
+		<link href="https://fonts.googleapis.com/css?family=Bungee Shade" rel="stylesheet">
 	</head>
 	<body>
-		<h1 class="centered">KILL ME NOW</h1>
+		<h1>KILL ME NOW</h1>
 	</body>
 </html>
+
