--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Bungee Shade" rel="stylesheet">
 	</head>
 	<body>
-		<h1>KILL ME NOW</h1>
+		<h1 class="centered">KILL ME NOW</h1>
 	</body>
 </html>
 
